Add new remove button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="calculator">
         <input type="text" class="result" value="0" disabled>
         <button data-c="clear" value="0" class="c-button">C</button>
+        <button data-c-one="c-one" class="num-button">-></button>
         <button data-operation="operation" value="/" class="num-button">/</button>
         <button data-num="num" value="7" class="num-button">7</button>
         <button data-num="num" value="8" class="num-button">8</button>
