--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button data-num="num" value="3" class="num-button">3</button>
         <button data-operation="operation" value="+" class="plus-button">+</button>
         <button data-num="num" value="0" class="num-button">0</button>
-        <button class="num-button" disabled>.</button>
+        <button data-point="point" value="." class="num-button" >.</button>
         <button data-result="res" class="num-button">=</button>
     </div>
 
